adds google analytics and adds to the non-functional settings screen

--- a/src/page.less
+++ b/src/page.less
@@ -58,6 +58,24 @@ body {
 			}
 		}
 
+		.content {
+			padding: 0 60px 50px;
+
+			h1 {
+				margin-bottom: 50px;
+				text-align:center;
+			}
+			label {
+				display: block;
+				font: bold 1.5em/1em 'Helvetica', sans-serif;
+			}
+			select {
+				display:block;
+				width:100%;
+				margin-bottom:50px;
+			}
+		}
+
 		#jumpStatusIcon{
 			position: absolute;
 			top:0;
